Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6946618/T6946618b.out
T6946618b.java:12:20: compiler.err.type.found.req: (compiler.misc.type.parameter: T), (compiler.misc.type.req.class)
1 error
